--- a/static/css/book_list.css
+++ b/static/css/book_list.css
@@ -1,249 +1,175 @@
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+@include "./constant";
+
+
+.book_container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
+  @media (min-width: 768px) {
+    .book_container {
+      width: 700px;
+    }
+  }
+  
+  @media (min-width: 992px) {
+    .book_container {
+      width: 900px;
+    }
+  }
+  
+  @media (min-width: 1200px) {
+    .book_container {
+      width: 1000px;
+    }
+  }
+
+.content_width{
+    margin:0 auto;
+    max-width:70rem;
+    position:relative;
 }
+
 #up_category_menu{
-    height: 3.125rem;
-    position: absolute;
-    width: 46.88rem;
-    left: 585px;
-    top: 150px;
+    height: 3rem;
+    width: 40rem;
     border: 0.125rem solid #E0E0E0;
-    transform: rotate(-0.07deg);
     border-radius: nullpx;
     border:none;
     outline: none;
     font-weight: 500;
-    font-size: 1.875rem;
+    font-size: var(--font-md-lg);
     text-align-last: center;
-    color: #757575;
+    color: var(--text-color);
+    border-bottom:1px solid;
+    
 }
-#line_major_bar{
-    position: absolute;
-    width: 46.88rem;
-    height: 0rem;
-    left: 585px;
-    top: 190px;
-    border: 0.125rem solid #E0E0E0;
-    transform: rotate(-0.07deg);
-}
-.search_input{
-    position: absolute;
-    width: 70.88rem;
-    height: 3.438rem;
-    left: 362px;
-    top: 235px;
-    border:  0.0625rem solid #8B8B8B;
-    box-sizing: border-box;
-    border-radius: 6.25rem;
-    font-family: Sacramento;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.25rem;
-    line-height: 0rem;
-    display: flex;
-    align-items: center;
-    color: #7B7B7B;
-}
-form input{
-    padding-left:1.25rem;
-}
-.btn_search{
-      position: absolute;
-      width: 2.625rem;
-      height:  2.75rem;
-      left: 1513px;
-      top: 250px;
-      border: 0;
-      outline:0;
-      background-color: #FFFFFF;
-}
+
 #btn_create{
-    position: absolute;
-    width: 12.69rem;
-    height: 2.5rem;
-    left: 1380px;
-    top: 150px;
+    padding:0.5em 1.5em;
     border: 0;
     outline:0;
-    background: #FF8300;
+    background: var(--orange);
     box-shadow: 0.3125rem  0.25rem  0.25rem rgba(0, 0, 0, 0.25);
-    font-weight: 500;
-    font-size: 1.125rem;
-    line-height: 1.688rem;
     text-align: center;
-    color: #FFFFFF;
-}
-.filtering-box{
-    position: absolute;
-    display: inline-block;
-    width: 100%;
-    height: 3.75rem;
-    left: 0px;
-    top: 310px;
-    border:0.0625rem solid #FF9F46;
-    background: #FF9F46;
+    color: white;
+    position:absolute;
+    top:0;
+    right:0;
 }
 
-input[type="checkbox"]+label{
-    width:  12.5rem;
-    height: 3.125rem;
-    background: url('../img/not_check.png') no-repeat 0 0rem / contain;
+@media screen and (max-width:900px){
+  #btn_create{
+    position:static;
 }
-input[type='checkbox']:checked+label{
-  background: url('../img/check.png') no-repeat 0 0rem / contain;
-}
-input[type="checkbox"] {
-    display: none;
 }
 
-.free_filter{
-    display: inline-block;
-    width: 200px;
-    height: 60px;
+.book_item{
+    background-color:var(--book-row-color);
 }
-.deal_filter{
-    display: inline-block;
-    width: 12.5rem;
-    height: 3.75rem;
+
+.search_btn{
+    border:none;
+    background-color:transparent;
 }
-.filter-txt{
-    font-weight: bold;
-    font-size:  1.875rem;
-    line-height:  1.813rem;
-    color: #FFFFFF;
-    position: absolute;
-    left:20%;
-    top:13px;
+
+.search_input{
+    border-radius: 6.25rem;
+    border:1px solid var(--text-color);
+    padding:0.5em 2em;
 }
-.free-label{
-    position: absolute;
-    left:35%;
-    top:5px;
-    padding-left:3.75rem;
-    padding-top: 0.625rem;
-    font-weight: bold;
-    font-size: 1.5rem;
-    line-height: 1.813rem;
-    color: #FFFFFF;
+
+.cross_bar{
+    background-color:var(--light-orange);
 }
-.deal-label{
-    position: absolute;
-    left:50%;
-    top:5px;
-    padding-left:3.75rem;
-    padding-top: 0.625rem;
-    font-weight: bold;
-    font-size: 1.5rem;
-    line-height: 1.813rem;
-    color: #FFFFFF;
+
+.all_filter_contents{
+    font-size:var(--font-md-lg);
+    color:white;
+    font-weight:600;
 }
-table{
-   position: absolute;
-   left: 290px;
-   top: 395px;
+
+table {
+    border-collapse: separate;
+    border-spacing: 0 1rem;
 }
-th{
-    text-align:center;
-    font-weight: 500;
-    font-size: 1.125rem;
-    line-height: 2.188rem;
-    /* or 175% */
-    align-items: center;
-    color: #484848;
-}
+
 td{
-    padding: 0.625rem;
-    border-bottom: 0.625rem solid #FFFFFF;
-    text-align:center;
-    background: #EFEFEF;
+    padding:0.75rem;
+}
+.book_item{
+    padding:1em 2em;
+    margin:1em 0;
 }
 
-.tabel_row{
-    border-radius: 0.625rem;
-    font-weight: bold;
-    color: #484848;
-    font-size: 1.125rem;
+.book_img{
+   width:100%;
+   height:100%;
 }
-td:nth-child(1){
-    width: 13.13rem;
-}
-td:nth-child(2){
-    width:15.63rem;
-    text-align:left;
-}
-td:nth-child(3){
-    width:18.13rem;
-}
-td:nth-child(4){
-    width:11.88rem;
-}
-td:nth-child(5){
-    width:12.5rem;
-}
-td:nth-child(6){
-    width: 12.5rem;
-}
-input:focus {
-    outline: none;
-}
-.form-check-input{
-    margin-left:0.625rem;
-}
-.btn_stated{
-    border: 0;
-    outline:0;
-    background-color: #FFFFFF;
-}
-.btn_closed_state{
-    border: 0;
-    outline:0;
-    background-color: #FFFFFF;
-}
-.list_state_content {
-    display: none;
-    position: absolute;
-    top: 0%;
-    left: 64%;
-    padding: 0.3125rem;
-    width: 15.63rem;
-    height: 6.938rem;
-    border: 0rem solid black;
-    box-shadow: 0rem 0rem 1.25rem 0.125rem rgba(0, 0, 0, 0.25);
-    background-color: white;
-    z-index:1002;
-    overflow: auto;
-}
-.state_box_text2{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 0.75rem;
-    float: left;
-}
-button:focus {
-    outline: none;
-}
-.no_search{
-    font-weight: 500;
-    font-size: 2.25rem;
-    line-height: 5rem;
-    /* or 222% */
-    text-align: center;
-    color: #757575;
-    height:  3.125rem;
-    position: absolute;
-    width: 46.88rem;
-    left: 600px;
-    top: 500px;
-    text-align-last: center;
 
+.col_book_img{
+    width:7rem;
+    height:7rem;
 }
-.search_word{
-    font-weight: 500;
-    font-size: 2.25rem;
-    line-height: 5rem;
-    /* or 222% */
-    text-align: center;
-    color: #757575;
+
+.book_title{
+    font-size:var(--font-md-lg);
+    font-weight: 800;
+}
+
+.book_major{
+    
+}
+
+.book_lecture{
+    font-weight: 800;
+}
+
+.book_state{
+    font-weight: 800;
+}
+
+.book_price{
+    font-weight: 800;
+}
+
+.book_state{
+    
+}
+
+/* tooltips */
+.tooltip1 {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip1 .tooltiptext {
+  visibility: hidden;
+  width: 20rem;
+  background-color: var(--orange);
+  color: white;
+  font-size:var(--font-md-sm);
+  border-radius: 6px;
+  padding: 3px 0;
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip1:hover .tooltiptext {
+    visibility: visible;
+}
+
+.page-link{
+  border:none;
+  color: var(--text-color);
+}
+
+.active{
+  color:var(--orange);
+}
+
+.notice_title{
+  color:var(--text-color);
 }
