--- a/templates/user/password_reset_confirm.html
+++ b/templates/user/password_reset_confirm.html
@@ -1,23 +1,30 @@
 {% extends "base.html" %}
 {% load static %}
 {% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/inform_page.css' %}">
 {% endblock %}
 {% block content %}
-<div class="content">
+<div class="container mt-5">
     {% if validlink %}
-    <h1>비밀번호 재설정<hr></h1>
-    <form class="reset_form" method="post">
-        {% csrf_token %}
-        {% include 'form_errors.html' %}
-        <label class="form_label" for="old_password">새 비밀번호</label>
-            <input type="password" name="new_password1" id="new_password1">
-            <label class="form_label" for="old_password">새 비밀번호 확인</label>
-            <input type="password" name="new_password2" id="new_password2">
-            <button class="submit_btn reset_btn" type="submit" class="">변경하기</button>
-    </form>
+    <div class="row mx-auto justify-content-start" style="max-width:500px">
+        <div class="heading">
+            <h1 class="m-0">비밀번호 재설정
+                <hr>
+            </h1>
+        </div>
+        <form class="form_group" method="post">
+            {% csrf_token %}
+            {% include 'form_errors.html' %}
+            <label for="new_password1">새 비밀번호</label>
+            <input type="password" class="form-control" name="new_password1" id="new_password1">
+            <label for="new_password2">새 비밀번호 확인</label>
+            <input type="password" class="form-control" name="new_password2" id="new_password2">
+            <div class="row justify-content-center">
+                <button class="submit_btn my-4" type="submit">변경하기</button>
+            </div>
+        </form>
+    </div>
     {% else %}
-    <h1>비밀번호 초기화를 실패하였습니다.</h1>
+    <h3>비밀번호 초기화를 실패하였습니다.</h3>
     <p>비밀번호 초기화 링크가 이미 사용되어 올바르지 않습니다. 비밀번호 초기화를 다시 해주세요.</p>
     {% endif %}
 </div>
