--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,31 +1,5 @@
-/* 기본 글꼴, 기본 글자색 */
-:root{
-    --text-color:#484848;
-    --brand-color:#FB8F1D;
-}
+@import './constants.css';
 
-
-html{
-    font-family: Inter;
-    color: var(--text-color);
-}
-
-a{
-    text-decoration:none;
-    white-space:nowrap;
-}
-
-a:hover{
-    text-decoration:none;
-}
-
-li{
-    list-style:none;
-}
-
-.header_main{
-    min-height: 100vh;
-}
 /* ------------------------------------------- */
 
 /* 제목: 공지사항, 마이페이지, 로그인, 로그아웃 */
@@ -33,7 +7,7 @@ li{
     margin-bottom:3rem;
 }
 
-h1{
+h1 .heading{
     font-weight: 600;
     font-size: 2.25rem;
     color: #4A4A4A;
@@ -76,7 +50,7 @@ input:focus{
 }
 
 .submit_btn{
-    background: var(--brand-color);
+    background: var(--orange-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
     border:none;
@@ -121,14 +95,6 @@ header{
     display: flex;   
 }
 
-
-@media screen and (max-width:1600px){
-    html{
-        font-family: Inter;
-        color: var(--text-color);
-        font-size:0.8em;
-    }
-}
 
 /* ------------------footer ------------------- */
 .footer {
