--- a/static/css/notice_detail.css
+++ b/static/css/notice_detail.css
@@ -1,58 +1,11 @@
+@include "./constant";
+
 .to_notice_list{
     font-weight: 600;
-    font-size: 1.5rem;
+    font-size: var(--font-md-lg);
     color: #EA9241;
 }
 
-.header{
-    margin-top:2em;
-    position:relative;
-    height:3em;
-
+.content_width{
+    width:1000px;
 }
-
-.title{
-    display:inline-block;
-    font-size: 2rem;
-    font-weight: 500;
-    letter-spacing: 0em;
-    position:absolute;
-    bottom:0;
-    left:0;
-}
-
-
-.info{
-    display:inline-block;
-    position:absolute;
-    bottom:0;
-    right:0;
-}
-
-.info>p{
-    vertical-align: bottom;
-}
-
-#content{
-   width:100%;
-   height:30rem;
-   outline: none;
-   background:white;
-   border:none;
-   resize: none;
-   font-family: Inter;
-   color: var(--text-color);
-}
-
-.info{
-    font-weight: 300;
-}
-
-.line1{
-    border: 2px solid #767676
-}
-
-.line2{
-    border: 2px solid #E0E0E0;
-}
-
