--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -1,29 +1,34 @@
-.content {
-    width: 46rem;
-    margin: 0 auto 3rem;
+@import "./constant.css";
+
+.signup-width{
+  width:35rem;
 }
 
-.form-group {
-    overflow: hidden;
-    position: relative;
 
+.row .heading> h1{
+    margin-left:0;
 }
 
-.username {
-    width: 70%;
-    float: left;
+.domain{
+    position:relative;
+    float:right;
+    bottom:50px;
+    right:15px;
 }
 
-.gender {
-    width: 30%;
-    position: absolute;
-    bottom: 0;
-    right: 1rem;
-    text-align: right;
+
+.terms_of_service>p{
+    text-align: center;
 }
+
+#terms_of_service{
+    width:100%;
+    height:20em;
+    font-size:var(--font-sm);
+}
+
 
 /* -------------custom gender radio button ----------------*/
-
 .radio_container {
     display: inline-block;
     position: relative;
@@ -87,104 +92,6 @@
 
 /* --------------------------------------------------------- */
 
-input[type="date"]{
-    width: 22.5rem;
-    height: 3.5rem;
-    border: 0.06px solid #AFB0B9;
-    box-sizing: border-box;
-    border-radius: 6px;
-    padding-left:1rem;
-}
-
-#email_field{
-    overflow: hidden;
-}
-
-#email{
-    width:70%;
-    padding-right:0;
-    float:left;
-    border-radius: 10px 0 0 10px;
-}
-
-#domain{
-    width:30%;
-    border-radius: 0 10px 10px 0;
-    float:left;
-}
-
-
-.university {
-    overflow: hidden;
-}
-
-.major_col1 {
-    display: inline-block;
-    float: left;
-    width: 23rem;
-}
-
-.major_col2 {
-    display: inline-block;
-    float: right;
-    width: 23rem;
-}
-
-.major_row{
-    float:right;
-}
-
-.university select {
-    width: 22rem;
-    height: 3.125rem;
-    box-sizing: border-box;
-    border-radius: 6px;
-    font-size: 1.25rem;
-    padding-left: 1.5em;
-    color: #4A4C53;
-}
-
-
-label {
-    font-weight: 600;
-    font-size: 1.4rem;
-    color: #5C5C5C;
-}
-
-
-.first_major {
-    border: 1px solid #FC8C15;
-}
-
-.major_col1>p {
-    margin: 0.1em;
-    color: #FC8C15;
-}
-
-.email_description {
-    font-weight: 600;
-    font-size: 1em;
-}
-
-.major {
-    font-weight: 600;
-    font-size: 1.37rem;
-    color: #5C5C5C;
-}
-
-.terms_of_service{
-    position: relative;
-    
-}
-
-.terms_of_service>p{
-    text-align: center;
-}
-
-#terms_of_service{
-    width:100%;
-    height:20em;
-}
 
 /* ---------------Custom checkbox ---------------*/
 /* The checkbox_container */
@@ -193,12 +100,7 @@ label {
     position: relative;
     padding-left: 2rem;
     cursor: pointer;
-    font-weight: normal;
-    font-size: 1.25rem;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    font-size:var(--font-md);
   }
   
   /* Hide the browser's default checkbox */
@@ -213,11 +115,11 @@ label {
   /* Create a custom checkbox */
   .checkmark2 {
     position: absolute;
-    top:0;
+    top: 0.25rem;
     left:0;
-    height: 1.6rem;
-    width: 1.6rem;
-    border: 2px solid #FB8F1D;
+    height: 1.25rem;
+    width: 1.25rem;
+    border: 2px solid var(--orange);
     box-sizing: border-box;
     border-radius: 1px;
     background-color: white;
@@ -242,22 +144,16 @@ label {
   
   /* Style the checkmark/indicator */
   .checkbox_container .checkmark2:after {
-    top:0.1rem;
-    left:0.1rem;
-    width: 1.2rem;
-    height: 1.2rem;
+    /* top:0.1rem;
+    left:0.1rem; */
+    width: 1rem;
+    height: 1rem;
     border: solid white 1px;
-    background-color:  #FC8C15;
+    background-color:  var(--orange);
   }
 
+
+  body > div.nav__main.vh > div:nth-child(2) > div > div > div:nth-child(2) > form > div.terms_of_service.form-group > p > label{
+    font-size:var(--font-md);
+}
 /* --------------------------------------------- */
-
-
-.button{
-    width:fit-content;
-    margin:0 auto;
-}
-
-.title{
-    display: block;
-}
