--- a/templates/base.html
+++ b/templates/base.html
@@ -3,54 +3,60 @@
 <html lang="ko">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="BooKU">
-    <meta name="keywords" content="BooKU">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="BooKU">
+  <meta name="keywords" content="BooKU">
 
-    <title>BooKU</title>
-    <!--reset CSS-->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
-    
-    
-    {% block styles %}
-    {% endblock %}
+  <title>BooKU</title>
+  <!-- webfont -->
+  <script src="https://kit.fontawesome.com/8c10e2519d.js" crossorigin="anonymous"></script>
+  <!--reset CSS-->
+  <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}"> -->
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+  <!-- custom CSS -->
+  <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}"> -->
+  <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
+  {% block styles %}
+  {% endblock %}
 </head>
+  <div class="nav__main vh">
+    {% include "navbar.html" %}
+    {% block content %}
+    {% endblock %}
+  </div>
 
-<body>
-    <div class="header_main">
-        <header>
-            {% include "navbar.html" %}
-        </header>
-        <main>
-            {% block content %}
-            {% endblock %}
-        </main>
+
+  <!--footer-->
+  <hr>
+  <div class="footer d-flex flex-column align-items-center py-2">
+    <div>
+      Contact Us | booku@outlook.kr
+      <div>
+        <a class="terms_of" href="{% url 'user:terms_of_service' %}">서비스이용약관</a>
+        <span class="gray">및</span>
+        <a class="terms_of" href="{% url 'user:privacy_policy' %}">개인정보처리방침</a>
+      </div>
+      <div>
+        © 2020 Copyright:
+        <a class="text-dark" href="https://booku.club/">BooKU.club</a>
+      </div>
     </div>
-    
-    <!--footer 추가-->
-    <div class="footer">
-        <div>
-          <h4>BooKU</h4>
-          Contact Us | booku@outlook.kr
-          <div class="">
-            <a class="terms_of" href="{% url 'user:terms_of_service' %}">서비스이용약관</a>
-           <span class="gray">및</span>
-            <a class="terms_of" href="{% url 'user:privacy_policy' %}">개인정보처리방침</a>
-          </div>
-          <div>
-            © 2020 Copyright:
-            <a class="text-dark" href="https://booku.club/">BooKU.club</a>
-          </div>
-
-        </div>
-
-</div>
+  </div>
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+</script>
+<script
+  src="https://code.jquery.com/jquery-3.6.0.js"
+  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+  crossorigin="anonymous"></script>
+{% block script %}
+{% endblock %}
 </body>
 
 </html>
