--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,26 @@
 {% extends "base.html" %}
-<!--html 파일 마다 css를 하나씩만 적용-->
 {% load static %}
 {% block styles %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
 {% endblock %}
 {% block content %}
-
-<section class="section-a">
-
-    <h1 class="title">건국대학교<br>전공책 교환 플랫폼</h1>
-
-    <p class="content">
-        <strong>우리학교, 우리과 친구들과 쉽게 전공책 거래하기!</strong>
-        <br>
-        BooKU는 건국대학생 서울캠퍼스 학생이라면 누구나 쉽게 전공책을 거래할 수 있는 플랫폼입니다.
-    </p>
-    <!-- <div class="explore">
-        <button>Explore</button>
-    </div> -->
-</section>
-<section class="section-b">
-    <img src="{% static 'img/index.svg' %}" class="index_img">
-</section>
+<main class="container v-center">
+    <div class="row align-items-center justify-content-between">
+        <div class="col-xl-5 col-md-6 description">
+            <div class="row">
+                <h1 class="title">건국대학교<br>전공책 교환 플랫폼</h1>
+            </div>
+            <div class="row">
+                <p class="content">
+                    <strong>우리학교, 우리과 친구들과 쉽게 전공책 거래하기!</strong>
+                    <br>
+                    BooKU는 건국대학생 서울캠퍼스 학생이라면 누구나 쉽게 전공책을 거래할 수 있는 플랫폼입니다.
+                </p>
+            </div>
+        </div>
+        <div class="col-xl-6 col-md-6">
+            <img src="{% static 'img/index.svg' %}" class="float-end index_img">
+        </div>
+    </div>
+</main>
 {% endblock %}
