--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,37 +1,44 @@
 {% load static %}
-<nav>
-    <a class="logo" href="{% url 'index' %}">
-        <!-- BooKU Image and Logo -->
-        <img src="{% static 'img/logo_icon.svg' %}" class="logo_icon">
-        BooKU
-    </a>
-
-    <ul class="nav__menu">
-        <li class="not_btn">
-            <a class="nav__link" href="{% url 'index' %}">홈화면</a>
-        </li>
-        <li class="not_btn">
-            <a class="nav__link" href="{% url 'book:index' %}">전공책 거래하기</a>
-        </li>
-        <li class="not_btn">
-            <a class="nav__link" href="{% url 'notice:notice_list' %}">공지사항</a>
-        </li>
-        <!-- <li class="nav-item not_btn">
-            <a class="nav-link" href="">쪽지</a>
-        </li> -->
-        <li>
-            {% if user.is_authenticated %}
-            <a class="login_logout" href="{% url 'user:logout' %}">Logout</a>
-            {% else %}
-            <a class="login_logout" href="{% url 'user:login' %}">Login</a>
-            {% endif %}
-        </li>
-        <li>
-            {% if user.is_authenticated %}
-            <a class="signup_mypage" href="{% url 'user:change_major' %}">My Page</a>
-            {% else %}
-            <a class="signup_mypage" href="{% url 'user:signup' %}">Sign Up</a>
-            {% endif %}
-        </li>
-    </ul>
-</nav>
+<div class="container">
+    <nav class="navbar navbar-expand-lg py-4">
+        <div class="container-fluid p-0">
+            <a class="navbar-brand logo d-flex align-item-center" href="{% url 'index' %}" id="navbar-brand">
+                <img src="{% static 'img/logo_icon.svg' %}" class="logo_icon me-3 ">
+                BooKU
+            </a>
+            <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse nav-lg justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link menu-item" aria-current="page" href="{% url 'index' %}">홈화면</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link menu-item" href="{% url 'book:index' %}">전공책 거래하기</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link menu-item" href="{% url 'notice:notice_list' %}">공지사항</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item d-flex justify-content-center">
+                        <a class="nav-link box-item" href="{% url 'user:logout' %}">Logout</a>
+                    </li>
+                    <li class="nav-item d-flex justify-content-center">
+                        <a class="nav-link box-item orange" href="{% url 'user:my_page' %}">My Page</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item d-flex justify-content-center">
+                        <a class="nav-link box-item" href="{% url 'user:login' %}">Login</a>
+                    </li>
+                    <li class="nav-item d-flex justify-content-center">
+                        <a class="nav-link box-item orange" href="{% url 'user:signup' %}">Sign Up</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+</div>
