--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -6,24 +6,59 @@
 
 
 {% block content %}
-<div class="container">
-    <div class="heading"><h1>로그인<hr></h1></div>
-    <form method="post" action="{% url 'user:login' %}">
-        {% csrf_token %}
-        {% include "form_errors.html" %}
-        <div class="email">
-            <input type="text" placeholder="학교 이메일" name="email" id="email" value="{{form.email.value|default_if_none:''}}">
+<div class="container vh">
+    <div class="row justify-content-center mt-5">
+        <div class="col-sm-10 col-md-8 col-lg-6 col-xl-4 ">
+            <div class="row heading">
+                <h1>로그인
+                    <hr>
+                </h1>
+            </div>
+            <div class="row justify-content-center">
+                <form class="d-flex flex-column align-items-center" method="post" action="{% url 'user:login' %}">
+                    {% csrf_token %}
+                    {% include "form_errors.html" %}
+                    <input class="form-control" type="text" placeholder="학교 이메일" name="email" id="email"
+                        value="{{form.email.value|default_if_none:''}}">
+                    <input class="form-control" type="password" placeholder=" 비밀번호" name="password" id="password"
+                        value="{{form.password.value|default_if_none:''}}">
+                    <button class="submit_btn mt-5" type="submit">로그인</button>
+                    <div class="row if">
+                        <span>아직 회원이 아니라면? <a class="signup" href="{% url 'user:signup' %}">가입하기</a><br>
+                            비밀번호가 기억나지 않을 때 <a class="reset_pwd" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">비밀번호 찾기</a></span>
+                    </div>
+                </form>
+            </div>
+
         </div>
-        <div class="pwd">
-            <input type="password" placeholder=" 비밀번호" name="password" id="password"  value="{{form.password.value|default_if_none:''}}">
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <button type="button" class="btn-close align-self-end mt-3 me-3" data-bs-dismiss="modal"
+                aria-label="Close"></button>
+            <div class="modal-body">
+                <h5 class="modal-title text-center mb-2" id="exampleModalLabel">비밀번호 찾기</h5>
+                <p class="text-center">가입에 사용하신 이메일로 비밀번호 변경링크를 전송해드립니다</p>
+                <form class="my-5 input-width mx-auto" method="post" action="{% url 'password_reset' %}">
+                    {% csrf_token %}
+                    {% include "form_errors.html" %}
+                    <div class="email form-group">
+                        <label for="email">이메일</label>
+                        <input type="text" class="form-control" placeholder="학교 이메일" name="email" id="email"
+                            value="{{form.email.value|default_if_none:''}}">
+                    </div>
+                    <div class="button">
+                        <button class="submit_btn" type="submit">비밀번호 찾기</button>
+                    </div>
+                </form>
+            </div>
+
         </div>
-        <div class="button">
-            <button class="submit_btn" type="submit">로그인</button>
-        </div>
-    </form>
-    <div class="if">
-        <span>아직 회원이 아니라면? <a class="signup" href="{% url 'user:signup' %}">가입하기</a><br>
-        비밀번호가 기억나지 않는다면? <a  href="{% url 'password_reset' %}">비밀번호 찾기</a></span>
     </div>
 </div>
 {% endblock %}
