--- a/templates/user/password_reset_complete.html
+++ b/templates/user/password_reset_complete.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% load static %}
 {% block styles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/inform_page.css' %}">
 {% endblock %}
 
 
 {% block content %}
-<div class="content">
-    <h1>비밀번호 변경 완료</h1>
+<div class="container mt-5 d-flex flex-column align-items-center">
+    <h3>비밀번호 변경 완료</h3>
     <p>비밀번호가 설정되었습니다. 이제 로그인하세요.</p>
+    <a class="submit_btn my-4" href="{% url 'user:login' %}">로그인 하러가기</a>
 </div>
-<a class="submit_btn login" href="{% url 'user:login' %}">로그인 하러가기</a>
+
 {% endblock %}
